<resources>
    <string name="app_name" translatable="false">CRUDHeroesApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_app" translatable="false">C.R.U.D Heroes</string>
    <string name="heroes_list">Heroes List</string>
    <string name="studio_list">Studio List</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_studio">Studio</string>
    <string name="lbl_hero">Hero</string>
    <string name="lbl_power">Power</string>
    <string name="lbl_weakness">Weakness</string>
    <string name="lbl_salvar">Save</string>
    <string name="lbl_headquarter">Headquarter</string>
    <string name="lbl_website" translatable="false">Website</string>
    <string name="lbl_remover">Remove</string>
</resources>
