<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/lbl_name"
              android:id="@+id/tvName"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_studio"
              android:id="@+id/tvStudio"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_power"
              android:id="@+id/tvPower"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_weakness"
              android:id="@+id/tvWeakness"/>

</LinearLayout>