<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.form.FormStudio"
        style="@style/AppTheme">

    <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
    >

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/studio"
                    android:id="@+id/ivStudio"/>

            <TextView
                    android:text="@string/lbl_studio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvStudio"
                    android:textSize="36sp"
                    android:layout_toEndOf="@id/ivStudio"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"

            />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputID"
                android:visibility="invisible">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputName">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/lbl_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputHeadquarter">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/lbl_headquarter"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputWebsite">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/lbl_website"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.constraint.ConstraintLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="392dp"
                tools:layout_editor_absoluteX="16dp">

            <Button android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_salvar"
                    android:id="@+id/btSalvar"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"

                    android:backgroundTint="@color/colorPrimary"
                    android:textColorLink="@color/colorAccent"/>
            <Button
                    android:text="@string/lbl_remover"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btRemover"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorLink="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="@+id/btSalvar"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/btSalvar"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    <include layout="@layout/loading"/>

</FrameLayout>